--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.10"
   },
